Add a togglebuttons demo panel

--- a/resources/swingset.properties
+++ b/resources/swingset.properties
@@ -216,6 +216,8 @@ ButtonDemo.check2=Two
 ButtonDemo.check3=Three
 ButtonDemo.checkX=<html><font size=2 color=red>Three<bold>(HTML!)</bold></font></html>
 
+ButtonDemo.toggle1="Toggle Me"
+
 ButtonDemo.customradio=A custom "chrome" radio button.
 ButtonDemo.customcheck=A custom lightbulb checkbox.
 
