--- a/resources/swingset.properties
+++ b/resources/swingset.properties
@@ -358,7 +358,7 @@ HtmlDemo.filename=swing.html
 
 ### Internal Frame Demo ###
 
-InternalFrameDemo.accessible_description=JInternal Frame Demo
+InternalFrameDemo.accessible_description=JInternal Frame Demo allows users to create internal frames
 InternalFrameDemo.create_frames_label=Create Customized Internal Frames
 InternalFrameDemo.title_text_field_label=Frame title:
 InternalFrameDemo.frame_label=Frame
