Set InternalFrameDemo.name

--- a/resources/swingset.properties
+++ b/resources/swingset.properties
@@ -358,6 +358,7 @@ HtmlDemo.filename=swing.html
 
 ### Internal Frame Demo ###
 
+InternalFrameDemo.name=JInternal Frame Demo
 InternalFrameDemo.accessible_description=JInternal Frame Demo allows users to create internal frames
 InternalFrameDemo.create_frames_label=Create Customized Internal Frames
 InternalFrameDemo.title_text_field_label=Frame title:
